syntax = "proto3";

package hello;

message HelloRequest { optional string name = 1; }

message HelloResponse { string message = 1; }

service HelloWorldService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
  rpc SayHelloClientStream(stream HelloRequest) returns (HelloResponse) {}
  rpc SayHelloServerStream(HelloRequest) returns (stream HelloResponse) {}
}
